# base_sfml_project

./: MODULE.bazel  README.md
src/: BUILD  main.cpp
src/assets/: BUILD
src/game/: BUILD
src/utils/: BUILD
src/widgets/: BUILD  baseWidget.cpp
