###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

module(
    name = "sfml_with_bazel_template",
    version = "0.0.1",
)

sfml = use_extension("//third_party:sfml_deps.bzl", "sfml")
use_repo(sfml, "sfml")